# rtaudio-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  memcpy-test.cpp  rtaudio-test.cpp  rtaudio-test.sln  rtaudio-test.vcxproj  rtaudio-test.vcxproj.filters
deploy/: dirsync.txt  sync-rpi1dev.bat
matlab/: delay_energy.m  find_delay.m
